--- a/archive/environment_uv_docker_jax_pytorch.ipynb
+++ b/archive/environment_uv_docker_jax_pytorch.ipynb
@@ -1,6 +1,28 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/workspace\n",
+      "['.devcontainer', '.dockerignore', '.env', '.git', '.gitignore', '.mypy_cache', '.pre-commit-config.yaml', '.pytest_cache', '.python-version', '.venv', 'app', 'archive', 'data', 'dev.env', 'docker-compose.yml', 'environment_uv_docker_jax_pytorch.ipynb', 'images', 'notebooks', 'pyproject.toml', 'README.md', 'scripts', 'src', 'tasks.py', 'tests', 'uv.lock']\n",
+      "['.dockerignore', '.env', 'devcontainer.json', 'Dockerfile', 'environment.yml', 'gpu_verify.py', 'install_dependencies.sh', 'install_quarto.sh', 'install_requirements.sh', 'jags_verify.py', 'pyjags_patch.py']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "print(os.getcwd())\n",
+    "print(os.listdir(os.getcwd()))\n",
+    "print(os.listdir(\"/workspace/.devcontainer\"))\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -9,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -36,17 +58,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting .dockerignore\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile .dockerignore\n",
     "**/.git\n",
@@ -70,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +98,6 @@
    "source": [
     "%%writefile dev.env\n",
     "ENV_NAME=docker_dev_template \n",
-    "CUDA_TAG=12.8.0          # default; override via invoke up --cuda-tag …\n",
     "\n",
     "# Fixed ports you actually care about\n",
     "HOST_JUPYTER_PORT=8890\n",
@@ -135,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +162,6 @@
    "source": [
     "%%writefile .env\n",
     "ENV_NAME=docker_dev_template \n",
-    "CUDA_TAG=12.8.0          # default; override via invoke up --cuda-tag …\n",
     "\n",
     "# Fixed ports you actually care about\n",
     "HOST_JUPYTER_PORT=8890\n",
@@ -200,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +226,6 @@
    "source": [
     "%%writefile .devcontainer/.env\n",
     "ENV_NAME=docker_dev_template \n",
-    "CUDA_TAG=12.8.0          # default; override via invoke up --cuda-tag …\n",
     "\n",
     "# Fixed ports you actually care about\n",
     "HOST_JUPYTER_PORT=8890\n",
@@ -265,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -332,16 +343,18 @@
     "# .devcontainer/Dockerfile — uv‑based replacement for the previous Conda image\n",
     "# -----------------------------------------------------------------------------\n",
     "# CUDA + cuDNN base with drivers already installed --------------------------------\n",
-    "ARG CUDA_TAG=12.8.0              # <── single source of truth\n",
-    "FROM nvidia/cuda:${CUDA_TAG}-cudnn-devel-ubuntu22.04\n",
+    "FROM nvidia/cuda:12.3.2-cudnn9-devel-ubuntu22.04\n",
     "\n",
-    "# ---------- build-time ARGs ---------------------------------------------------\n",
-    "ARG PYTHON_VER=3.10\n",
-    "ARG ENV_NAME=docker_dev_template\n",
+    "# ----------------------------------------------------------------------------\n",
+    "# --- Build‑time ARGs ---------------------------------------------------------\n",
+    "ARG PYTHON_VER=3.10               # system Python to seed the venv\n",
+    "ARG ENV_NAME=docker_dev_template  # prompt shown when the venv is active\n",
+    "# JAX GPU memory tuning (kept 1‑for‑1 with the old Conda image)\n",
     "ARG JAX_PREALLOCATE=true\n",
     "ARG JAX_MEM_FRAC=0.95\n",
     "ARG JAX_ALLOCATOR=platform\n",
     "ARG JAX_PREALLOC_LIMIT=8589934592\n",
+    "\n",
     "ENV DEBIAN_FRONTEND=noninteractive\n",
     "\n",
     "# ----------------------------------------------------------------------------\n",
@@ -378,36 +391,14 @@
     "ENV PATH=\"/app/.venv/bin:${PATH}\"\n",
     "\n",
     "# ----------------------------------------------------------------------------\n",
-    "# 5) ---------- CUDA wheels -------------------------------------------------------\n",
+    "# 5) Install CUDA wheels (PyTorch nightly + JAX CUDA 12) ----------------------\n",
     "RUN --mount=type=cache,target=/root/.cache/uv \\\n",
     "    uv pip install --pre --no-cache-dir \\\n",
     "        torch torchvision torchaudio \\\n",
     "        --index-url https://download.pytorch.org/whl/nightly/cu128 && \\\n",
     "    uv pip install --no-cache-dir \\\n",
-    "        \"jax[cuda12]==0.6.0\" \\\n",
+    "        \"jax[cuda12-local]==0.4.38\" \\\n",
     "        -f https://storage.googleapis.com/jax-releases/jax_cuda_releases.html\n",
-    "\n",
-    "# --- CUDA toolkit sanity check (robust for runtime *and* devel images) ------\n",
-    "RUN set -e; \\\n",
-    "    # 1️⃣ First try: any cuda-<ver> folder?\n",
-    "    CUDA_REAL=\"$(ls -d /usr/local/cuda-* 2>/dev/null | sort -V | tail -n1 || true)\"; \\\n",
-    "    # 2️⃣ Fallback: flat layout shipped by some runtime images\n",
-    "    if [ -z \"$CUDA_REAL\" ] && [ -d /usr/local/cuda ]; then \\\n",
-    "        CUDA_REAL=\"/usr/local/cuda\"; \\\n",
-    "    fi; \\\n",
-    "    # 3️⃣ Bail if still empty\n",
-    "    if [ -z \"$CUDA_REAL\" ]; then \\\n",
-    "        echo '❌  No CUDA toolkit folder found — aborting.' >&2; exit 1; \\\n",
-    "    fi; \\\n",
-    "    # 4️⃣ Refresh the canonical symlink only when needed\n",
-    "    if [ \"$CUDA_REAL\" != \"/usr/local/cuda\" ]; then \\\n",
-    "        echo \"🔧  Linking /usr/local/cuda -> $CUDA_REAL\"; \\\n",
-    "        ln -sfn \"$CUDA_REAL\" /usr/local/cuda; \\\n",
-    "    fi; \\\n",
-    "    echo \"🟢  CUDA toolkit detected at $CUDA_REAL\"\n",
-    "\n",
-    "\n",
-    "\n",
     "\n",
     "# ----------------------------------------------------------------------------\n",
     "# 6) Install PyJAGS with the cstdint header work‑around -----------------------\n",
@@ -444,12 +435,12 @@
     "# 12) Force every IPython / Jupyter kernel to start in /workspace\n",
     "RUN mkdir -p /root/.ipython/profile_default/startup && \\\n",
     "    printf \"import os, sys\\nos.chdir('/workspace')\\nsys.path.append('/workspace')\\n\" \\\n",
-    "      > /root/.ipython/profile_default/startup/00-cd-workspace.py\n"
+    "      > /root/.ipython/profile_default/startup/00-cd-workspace.py"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -589,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -667,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -769,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -849,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1002,7 +993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1274,7 +1265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
