updating repo structure

--- a/archive/environment_uv_docker_jax_pytorch.ipynb
+++ b/archive/environment_uv_docker_jax_pytorch.ipynb
@@ -1,28 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/workspace\n",
-      "['.devcontainer', '.dockerignore', '.env', '.git', '.gitignore', '.mypy_cache', '.pre-commit-config.yaml', '.pytest_cache', '.python-version', '.venv', 'app', 'archive', 'data', 'dev.env', 'docker-compose.yml', 'environment_uv_docker_jax_pytorch.ipynb', 'images', 'notebooks', 'pyproject.toml', 'README.md', 'scripts', 'src', 'tasks.py', 'tests', 'uv.lock']\n",
-      "['.dockerignore', '.env', 'devcontainer.json', 'Dockerfile', 'environment.yml', 'gpu_verify.py', 'install_dependencies.sh', 'install_quarto.sh', 'install_requirements.sh', 'jags_verify.py', 'pyjags_patch.py']\n"
-     ]
-    }
-   ],
-   "source": [
-    "import os\n",
-    "print(os.getcwd())\n",
-    "print(os.listdir(os.getcwd()))\n",
-    "print(os.listdir(\"/workspace/.devcontainer\"))\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -31,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -58,9 +36,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting .dockerignore\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile .dockerignore\n",
     "**/.git\n",
@@ -84,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -98,6 +84,7 @@
    "source": [
     "%%writefile dev.env\n",
     "ENV_NAME=docker_dev_template \n",
+    "CUDA_TAG=12.8.0          # default; override via invoke up --cuda-tag …\n",
     "\n",
     "# Fixed ports you actually care about\n",
     "HOST_JUPYTER_PORT=8890\n",
@@ -148,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -162,6 +149,7 @@
    "source": [
     "%%writefile .env\n",
     "ENV_NAME=docker_dev_template \n",
+    "CUDA_TAG=12.8.0          # default; override via invoke up --cuda-tag …\n",
     "\n",
     "# Fixed ports you actually care about\n",
     "HOST_JUPYTER_PORT=8890\n",
@@ -212,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -226,6 +214,7 @@
    "source": [
     "%%writefile .devcontainer/.env\n",
     "ENV_NAME=docker_dev_template \n",
+    "CUDA_TAG=12.8.0          # default; override via invoke up --cuda-tag …\n",
     "\n",
     "# Fixed ports you actually care about\n",
     "HOST_JUPYTER_PORT=8890\n",
@@ -276,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -343,18 +332,16 @@
     "# .devcontainer/Dockerfile — uv‑based replacement for the previous Conda image\n",
     "# -----------------------------------------------------------------------------\n",
     "# CUDA + cuDNN base with drivers already installed --------------------------------\n",
-    "FROM nvidia/cuda:12.3.2-cudnn9-devel-ubuntu22.04\n",
+    "ARG CUDA_TAG=12.8.0              # <── single source of truth\n",
+    "FROM nvidia/cuda:${CUDA_TAG}-cudnn-devel-ubuntu22.04\n",
     "\n",
-    "# ----------------------------------------------------------------------------\n",
-    "# --- Build‑time ARGs ---------------------------------------------------------\n",
-    "ARG PYTHON_VER=3.10               # system Python to seed the venv\n",
-    "ARG ENV_NAME=docker_dev_template  # prompt shown when the venv is active\n",
-    "# JAX GPU memory tuning (kept 1‑for‑1 with the old Conda image)\n",
+    "# ---------- build-time ARGs ---------------------------------------------------\n",
+    "ARG PYTHON_VER=3.10\n",
+    "ARG ENV_NAME=docker_dev_template\n",
     "ARG JAX_PREALLOCATE=true\n",
     "ARG JAX_MEM_FRAC=0.95\n",
     "ARG JAX_ALLOCATOR=platform\n",
     "ARG JAX_PREALLOC_LIMIT=8589934592\n",
-    "\n",
     "ENV DEBIAN_FRONTEND=noninteractive\n",
     "\n",
     "# ----------------------------------------------------------------------------\n",
@@ -391,14 +378,36 @@
     "ENV PATH=\"/app/.venv/bin:${PATH}\"\n",
     "\n",
     "# ----------------------------------------------------------------------------\n",
-    "# 5) Install CUDA wheels (PyTorch nightly + JAX CUDA 12) ----------------------\n",
+    "# 5) ---------- CUDA wheels -------------------------------------------------------\n",
     "RUN --mount=type=cache,target=/root/.cache/uv \\\n",
     "    uv pip install --pre --no-cache-dir \\\n",
     "        torch torchvision torchaudio \\\n",
     "        --index-url https://download.pytorch.org/whl/nightly/cu128 && \\\n",
     "    uv pip install --no-cache-dir \\\n",
-    "        \"jax[cuda12-local]==0.4.38\" \\\n",
+    "        \"jax[cuda12]==0.6.0\" \\\n",
     "        -f https://storage.googleapis.com/jax-releases/jax_cuda_releases.html\n",
+    "\n",
+    "# --- CUDA toolkit sanity check (robust for runtime *and* devel images) ------\n",
+    "RUN set -e; \\\n",
+    "    # 1️⃣ First try: any cuda-<ver> folder?\n",
+    "    CUDA_REAL=\"$(ls -d /usr/local/cuda-* 2>/dev/null | sort -V | tail -n1 || true)\"; \\\n",
+    "    # 2️⃣ Fallback: flat layout shipped by some runtime images\n",
+    "    if [ -z \"$CUDA_REAL\" ] && [ -d /usr/local/cuda ]; then \\\n",
+    "        CUDA_REAL=\"/usr/local/cuda\"; \\\n",
+    "    fi; \\\n",
+    "    # 3️⃣ Bail if still empty\n",
+    "    if [ -z \"$CUDA_REAL\" ]; then \\\n",
+    "        echo '❌  No CUDA toolkit folder found — aborting.' >&2; exit 1; \\\n",
+    "    fi; \\\n",
+    "    # 4️⃣ Refresh the canonical symlink only when needed\n",
+    "    if [ \"$CUDA_REAL\" != \"/usr/local/cuda\" ]; then \\\n",
+    "        echo \"🔧  Linking /usr/local/cuda -> $CUDA_REAL\"; \\\n",
+    "        ln -sfn \"$CUDA_REAL\" /usr/local/cuda; \\\n",
+    "    fi; \\\n",
+    "    echo \"🟢  CUDA toolkit detected at $CUDA_REAL\"\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "# ----------------------------------------------------------------------------\n",
     "# 6) Install PyJAGS with the cstdint header work‑around -----------------------\n",
@@ -435,12 +444,12 @@
     "# 12) Force every IPython / Jupyter kernel to start in /workspace\n",
     "RUN mkdir -p /root/.ipython/profile_default/startup && \\\n",
     "    printf \"import os, sys\\nos.chdir('/workspace')\\nsys.path.append('/workspace')\\n\" \\\n",
-    "      > /root/.ipython/profile_default/startup/00-cd-workspace.py"
+    "      > /root/.ipython/profile_default/startup/00-cd-workspace.py\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -580,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -626,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -658,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -760,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -840,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -993,7 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1265,7 +1274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
