--- a/environment_uv_docker_jax_pytorch.ipynb
+++ b/environment_uv_docker_jax_pytorch.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -70,19 +70,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting dev.env\n"
+      "Overwriting .env.template\n"
      ]
     }
    ],
    "source": [
-    "%%writefile dev.env\n",
+    "%%writefile .env.template \n",
     "ENV_NAME=docker_dev_template \n",
     "CUDA_TAG=12.8.0          # default; override via invoke up --cuda-tag …\n",
     "\n",
@@ -125,147 +125,12 @@
     "NOTEBOOK_PATH=notebooks/demo.ipynb\n",
     "# OracleDB\n",
     "ORACLE_CONNECTION_STRING=username/password@//host:port/service\n",
-    "TARGET_SCHEMA=your_schema\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "TARGET_SCHEMA=your_schema\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting .env\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%writefile .env\n",
-    "ENV_NAME=docker_dev_template \n",
-    "CUDA_TAG=12.8.0          # default; override via invoke up --cuda-tag …\n",
-    "\n",
-    "# Fixed ports you actually care about\n",
-    "HOST_JUPYTER_PORT=8890\n",
-    "\n",
-    "# Leave blank → Docker picks a free host port\n",
-    "HOST_TENSORBOARD_PORT=\n",
-    "HOST_EXPLAINER_PORT=\n",
-    "HOST_STREAMLIT_PORT=\n",
-    "\n",
-    "# JAX/GPU Configuration\n",
-    "PYTHON_VER=3.10\n",
-    "JAX_PLATFORM_NAME=gpu\n",
-    "XLA_PYTHON_CLIENT_PREALLOCATE=true\n",
-    "XLA_PYTHON_CLIENT_ALLOCATOR=platform\n",
-    "XLA_PYTHON_CLIENT_MEM_FRACTION=0.95\n",
-    "XLA_FLAGS=--xla_force_host_platform_device_count=1\n",
-    "JAX_DISABLE_JIT=false\n",
-    "JAX_ENABLE_X64=false\n",
-    "TF_FORCE_GPU_ALLOW_GROWTH=false\n",
-    "JAX_PREALLOCATION_SIZE_LIMIT_BYTES=8589934592\n",
-    "\n",
-    "# Code Executor\n",
-    "CODE_STORAGE_DIR=code_executor_storage\n",
-    "ENV_NAME=docker_dev_template\n",
-    "\n",
-    "# Snowflake\n",
-    "SNOWFLAKE_ACCOUNT=your_account\n",
-    "SNOWFLAKE_USER=your_user\n",
-    "SNOWFLAKE_PASSWORD=your_password\n",
-    "SNOWFLAKE_ROLE=your_role\n",
-    "SNOWFLAKE_WAREHOUSE=your_warehouse\n",
-    "SNOWFLAKE_DATABASE=your_database\n",
-    "SNOWFLAKE_SCHEMA=your_schema\n",
-    "\n",
-    "# Jupyter\n",
-    "JUPYTER_URL=http://host.docker.internal:8890\n",
-    "JUPYTER_TOKEN=insert_token         # must match token used in jupyter lab command\n",
-    "NOTEBOOK_PATH=notebooks/demo.ipynb\n",
-    "# OracleDB\n",
-    "ORACLE_CONNECTION_STRING=username/password@//host:port/service\n",
-    "TARGET_SCHEMA=your_schema\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting .devcontainer/.env\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%writefile .devcontainer/.env\n",
-    "ENV_NAME=docker_dev_template \n",
-    "CUDA_TAG=12.8.0          # default; override via invoke up --cuda-tag …\n",
-    "\n",
-    "# Fixed ports you actually care about\n",
-    "HOST_JUPYTER_PORT=8890\n",
-    "\n",
-    "# Leave blank → Docker picks a free host port\n",
-    "HOST_TENSORBOARD_PORT=\n",
-    "HOST_EXPLAINER_PORT=\n",
-    "HOST_STREAMLIT_PORT=\n",
-    "\n",
-    "# JAX/GPU Configuration\n",
-    "PYTHON_VER=3.10\n",
-    "JAX_PLATFORM_NAME=gpu\n",
-    "XLA_PYTHON_CLIENT_PREALLOCATE=true\n",
-    "XLA_PYTHON_CLIENT_ALLOCATOR=platform\n",
-    "XLA_PYTHON_CLIENT_MEM_FRACTION=0.95\n",
-    "XLA_FLAGS=--xla_force_host_platform_device_count=1\n",
-    "JAX_DISABLE_JIT=false\n",
-    "JAX_ENABLE_X64=false\n",
-    "TF_FORCE_GPU_ALLOW_GROWTH=false\n",
-    "JAX_PREALLOCATION_SIZE_LIMIT_BYTES=8589934592\n",
-    "\n",
-    "# Code Executor\n",
-    "CODE_STORAGE_DIR=code_executor_storage\n",
-    "ENV_NAME=docker_dev_template\n",
-    "\n",
-    "# Snowflake\n",
-    "SNOWFLAKE_ACCOUNT=your_account\n",
-    "SNOWFLAKE_USER=your_user\n",
-    "SNOWFLAKE_PASSWORD=your_password\n",
-    "SNOWFLAKE_ROLE=your_role\n",
-    "SNOWFLAKE_WAREHOUSE=your_warehouse\n",
-    "SNOWFLAKE_DATABASE=your_database\n",
-    "SNOWFLAKE_SCHEMA=your_schema\n",
-    "\n",
-    "# Jupyter\n",
-    "JUPYTER_URL=http://host.docker.internal:8890\n",
-    "JUPYTER_TOKEN=insert_token         # must match token used in jupyter lab command\n",
-    "NOTEBOOK_PATH=notebooks/demo.ipynb\n",
-    "# OracleDB\n",
-    "ORACLE_CONNECTION_STRING=username/password@//host:port/service\n",
-    "TARGET_SCHEMA=your_schema\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -589,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -667,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -704,8 +569,7 @@
     "    gpus: all\n",
     "\n",
     "    env_file:\n",
-    "      - dev.env\n",
-    "      - .devcontainer/.env\n",
+    "      - .env.template     # acts as the \"defaults\" layer\n",
     "\n",
     "    environment:\n",
     "      - PYTHON_VER=${PYTHON_VER}\n",
@@ -769,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -849,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -864,13 +728,60 @@
     "%%writefile tasks.py\n",
     "# tasks.py  ── invoke ≥2.2\n",
     "from invoke import task, Context\n",
+    "from typing import List, Optional\n",
     "\n",
     "import os\n",
     "import sys\n",
     "import pathlib\n",
+    "import tempfile\n",
+    "import datetime as _dt\n",
+    "import atexit\n",
     "\n",
     "\n",
     "BASE_ENV = pathlib.Path(__file__).parent\n",
+    "\n",
+    "\n",
+    "# Track temporary env files for cleanup\n",
+    "_saved_env_files: List[str] = []\n",
+    "\n",
+    "\n",
+    "def _write_envfile(name: str, ports: Optional[dict[str, int]] = None) -> pathlib.Path:\n",
+    "    \"\"\"Generate an .env file customised for this run & return its path.\"\"\"\n",
+    "    env_lines = [f\"ENV_NAME={name}\"]\n",
+    "    mapping = {\n",
+    "        \"jupyter\": \"HOST_JUPYTER_PORT\",\n",
+    "        \"tensorboard\": \"HOST_TENSORBOARD_PORT\",\n",
+    "        \"explainer\": \"HOST_EXPLAINER_PORT\",\n",
+    "        \"streamlit\": \"HOST_STREAMLIT_PORT\",\n",
+    "    }\n",
+    "    for svc, var in mapping.items():\n",
+    "        if ports and svc in ports:\n",
+    "            env_lines.append(f\"{var}={ports[svc]}\")\n",
+    "    # fall back to template defaults for everything else\n",
+    "    env_lines.append(f\"# generated {_dt.datetime.now().isoformat()}\")\n",
+    "    tmp = tempfile.NamedTemporaryFile(\n",
+    "        \"w\", \n",
+    "        delete=False, \n",
+    "        prefix=\".env.\",\n",
+    "        dir=BASE_ENV\n",
+    "    )\n",
+    "    tmp.write(\"\\n\".join(env_lines))\n",
+    "    tmp.close()\n",
+    "    _saved_env_files.append(tmp.name)\n",
+    "    return pathlib.Path(tmp.name)\n",
+    "\n",
+    "\n",
+    "# Register cleanup function\n",
+    "def _cleanup_env_files() -> None:\n",
+    "    \"\"\"Remove all temporary env files.\"\"\"\n",
+    "    for path in _saved_env_files:\n",
+    "        try:\n",
+    "            os.remove(path)\n",
+    "        except OSError:\n",
+    "            pass\n",
+    "\n",
+    "\n",
+    "atexit.register(_cleanup_env_files)\n",
     "\n",
     "\n",
     "def _compose(\n",
@@ -879,14 +790,14 @@
     "    name: str,\n",
     "    rebuild: bool = False,\n",
     "    force_pty: bool = False,\n",
-    "    ports: dict | None = None,\n",
+    "    ports: Optional[dict[str, int]] = None,\n",
     ") -> None:\n",
     "    \"\"\"\n",
     "    Wrapper around `docker compose` that\n",
     "\n",
     "    • Injects ENV_NAME and COMPOSE_PROJECT_NAME so both build-time (*args*)\n",
     "      and runtime (*docker-compose.yml* env) use one canonical name.\n",
-    "    • Passes `-p <name>` so images / volumes share that namespace.\n",
+    "    • Passes `-p <n>` so images / volumes share that namespace.\n",
     "    • Falls back gracefully when PTYs are unavailable (Windows CI).\n",
     "    • Allows custom port configuration via ports dict.\n",
     "    \"\"\"\n",
@@ -929,14 +840,14 @@
     ")\n",
     "def up(\n",
     "    c,\n",
-    "    name: str | None = None,\n",
+    "    name: Optional[str] = None,\n",
     "    rebuild: bool = False,\n",
     "    detach: bool = True,\n",
     "    use_pty: bool = False,\n",
-    "    jupyter_port: int | None = None,\n",
-    "    tensorboard_port: int | None = None,\n",
-    "    explainer_port: int | None = None,\n",
-    "    streamlit_port: int | None = None,\n",
+    "    jupyter_port: Optional[int] = None,\n",
+    "    tensorboard_port: Optional[int] = None,\n",
+    "    explainer_port: Optional[int] = None,\n",
+    "    streamlit_port: Optional[int] = None,\n",
     ") -> None:\n",
     "    \"\"\"Build (optionally --rebuild) & start the container with custom ports.\"\"\"\n",
     "    name = name or BASE_ENV.name\n",
@@ -952,9 +863,14 @@
     "    if streamlit_port is not None:\n",
     "        ports[\"streamlit\"] = streamlit_port\n",
     "    \n",
+    "    # Generate environment file\n",
+    "    env_path = _write_envfile(name, ports)\n",
+    "    env_file_flag = f\"--env-file {env_path}\"\n",
+    "    compose_cmd = \"up -d\" if detach else \"up\"\n",
+    "\n",
     "    _compose(\n",
     "        c,\n",
-    "        \"up -d\" if detach else \"up\",\n",
+    "        f\"{env_file_flag} {compose_cmd}\",\n",
     "        name,\n",
     "        rebuild=rebuild,\n",
     "        force_pty=use_pty,\n",
@@ -962,10 +878,20 @@
     "    )\n",
     "\n",
     "\n",
-    "@task\n",
-    "def stop(c) -> None:\n",
+    "@task(\n",
+    "    help={\n",
+    "        \"name\": \"Project/venv name (defaults to folder name)\",\n",
+    "    }\n",
+    ")\n",
+    "def stop(c, name: Optional[str] = None) -> None:\n",
     "    \"\"\"Stop and remove dev container (keeps volumes).\"\"\"\n",
-    "    c.run(\"docker compose down\")\n",
+    "    name = name or BASE_ENV.name\n",
+    "    cmd = f\"docker compose -p {name} down\"\n",
+    "    try:\n",
+    "        c.run(cmd)\n",
+    "        print(f\"\\n🛑 Stopped and removed project '{name}'\")\n",
+    "    except Exception:\n",
+    "        print(f\"❌ No running containers found for project '{name}'\")\n",
     "\n",
     "\n",
     "@task\n",
@@ -1002,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1274,7 +1200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
