updating to include a invoke down method

--- a/environment_uv_docker_jax_pytorch.ipynb
+++ b/environment_uv_docker_jax_pytorch.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -713,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -923,12 +923,78 @@
     "        print(\"\\n💡 Usage examples:\")\n",
     "        print(\"  invoke up --name myproject --jupyter-port 8891\")\n",
     "        print(\"  invoke up --name myproject --jupyter-port 8892 \\\\\")\n",
-    "        print(\"    --tensorboard-port 6009\")\n"
+    "        print(\"    --tensorboard-port 6009\")\n",
+    "\n",
+    "\n",
+    "# --- utilities ---------------------------------------------------------------\n",
+    "def _norm(path: str | pathlib.Path) -> str:\n",
+    "    \"\"\"Return a lower-case, forward-slash, no-trailing-slash version of *path*.\"\"\"\n",
+    "    p = str(path).replace(\"\\\\\", \"/\").rstrip(\"/\").lower()\n",
+    "    return p\n",
+    "\n",
+    "def _docker_projects_from_this_repo() -> set[str]:\n",
+    "    \"\"\"\n",
+    "    Discover every Compose *project name* whose working_dir label ends with\n",
+    "    the current repo path.\n",
+    "\n",
+    "    Works across Windows ↔ WSL ↔ macOS because we do suffix-match on a\n",
+    "    normalised path.\n",
+    "    \"\"\"\n",
+    "    here_tail = _norm(pathlib.Path(__file__).parent.resolve())\n",
+    "    cmd = (\n",
+    "        \"docker container ls -a \"\n",
+    "        \"--format '{{.Label \\\"com.docker.compose.project\\\"}} \"\n",
+    "        \"{{.Label \\\"com.docker.compose.project.working_dir\\\"}}' \"\n",
+    "        \"--filter label=com.docker.compose.project\"\n",
+    "    )\n",
+    "    projects: set[str] = set()\n",
+    "    for line in os.popen(cmd).read().strip().splitlines():\n",
+    "        try:\n",
+    "            proj, wd = line.split(maxsplit=1)\n",
+    "        except ValueError:\n",
+    "            continue\n",
+    "        if _norm(wd).endswith(here_tail):\n",
+    "            projects.add(proj)\n",
+    "    return projects\n",
+    "\n",
+    "# --- task --------------------------------------------------------------------\n",
+    "@task(\n",
+    "    help={\n",
+    "        \"name\": \"Project name (defaults to folder). Ignored with --all.\",\n",
+    "        \"all\":  \"Remove *all* projects launched from this repo.\",\n",
+    "        \"rmi\":  \"Image-removal policy: all | local | none (default: local).\",\n",
+    "    }\n",
+    ")\n",
+    "def down(c, name: str | None = None, all: bool = False, rmi: str = \"local\"):\n",
+    "    \"\"\"\n",
+    "    Stop containers **and** fully delete every artefact so next `invoke up`\n",
+    "    starts from a clean slate.\n",
+    "\n",
+    "    Examples\n",
+    "    --------\n",
+    "    invoke down                  # nuke current-folder project\n",
+    "    invoke down --name ml_project --rmi all   # wipe everything for ml_project\n",
+    "    invoke down --all            # tear down every project from this repo\n",
+    "    \"\"\"\n",
+    "    if rmi not in {\"all\", \"local\", \"none\"}:\n",
+    "        raise ValueError(\"--rmi must be all | local | none\")\n",
+    "\n",
+    "    targets = _docker_projects_from_this_repo() if all else {name or BASE_ENV.name}\n",
+    "    flags = \"-v --remove-orphans\"\n",
+    "    if rmi != \"none\":\n",
+    "        flags += f\" --rmi {rmi}\"\n",
+    "\n",
+    "    for proj in targets:\n",
+    "        try:\n",
+    "            c.run(f\"docker compose -p {proj} down {flags}\")\n",
+    "            print(f\"🗑️  Removed project '{proj}'\")\n",
+    "        except Exception:\n",
+    "            print(f\"⚠️  Nothing to remove for '{proj}'\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1200,7 +1266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
