--- a/example_fastapi_react_vite_optimized.ipynb
+++ b/example_fastapi_react_vite_optimized.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "id": "bf67aa45",
    "metadata": {},
    "outputs": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "id": "80a61c56",
    "metadata": {},
    "outputs": [
@@ -461,6 +461,63 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "760d795c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting render.yaml\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile render.yaml\n",
+    "services:\n",
+    "  - type: web\n",
+    "    name: ml-backend\n",
+    "    runtime: python\n",
+    "    plan: free\n",
+    "    buildCommand: pip install -r backend/requirements.txt\n",
+    "    startCommand: cd backend && uvicorn app.main:app --host 0.0.0.0 --port $PORT\n",
+    "    autoDeploy: true\n",
+    "    healthCheckPath: /health "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "f9cc997d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting netlify.toml\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile netlify.toml\n",
+    "[build]\n",
+    "base = \"frontend\"\n",
+    "command = \"npm run build\"\n",
+    "publish = \"dist\"\n",
+    "\n",
+    "[build.environment]\n",
+    "NODE_VERSION = \"18.20.0\"\n",
+    "\n",
+    "[[redirects]]\n",
+    "  from = \"/*\"\n",
+    "  to = \"/index.html\"\n",
+    "  status = 200 "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "64bd01d0",
    "metadata": {},
@@ -470,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 68,
    "id": "eb81edf7",
    "metadata": {},
    "outputs": [
@@ -489,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 69,
    "id": "f25a842a",
    "metadata": {},
    "outputs": [
@@ -512,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 70,
    "id": "2fdf9832",
    "metadata": {},
    "outputs": [
@@ -531,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 71,
    "id": "6e486eda",
    "metadata": {},
    "outputs": [
@@ -550,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 72,
    "id": "a8614215",
    "metadata": {},
    "outputs": [
@@ -569,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 73,
    "id": "7ba9eff0",
    "metadata": {},
    "outputs": [
@@ -588,7 +645,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 74,
+   "id": "87336ac7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting requirements.txt\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile requirements.txt\n",
+    "fastapi>=0.104.0\n",
+    "uvicorn>=0.24.0\n",
+    "pydantic>=2.4.2\n",
+    "python-multipart>=0.0.6\n",
+    "mlflow>=2.8.0\n",
+    "numpy>=1.24.0\n",
+    "pandas>=2.1.0\n",
+    "scikit-learn>=1.3.0\n",
+    "python-dotenv>=1.0.0 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
    "id": "bda8c3a0",
    "metadata": {},
    "outputs": [
@@ -642,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 76,
    "id": "c3cd52d9",
    "metadata": {},
    "outputs": [
@@ -677,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 77,
    "id": "33fe907d",
    "metadata": {},
    "outputs": [
@@ -784,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 78,
    "id": "0e3bbb80",
    "metadata": {},
    "outputs": [
@@ -898,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 79,
    "id": "be2f77ed",
    "metadata": {},
    "outputs": [
@@ -1035,7 +1119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "id": "4ba5076d",
    "metadata": {},
    "outputs": [
@@ -1191,7 +1275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 81,
    "id": "d2340c8c",
    "metadata": {},
    "outputs": [
@@ -1366,7 +1450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 82,
    "id": "9132b544",
    "metadata": {},
    "outputs": [
@@ -1502,7 +1586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 83,
    "id": "c401848b",
    "metadata": {},
    "outputs": [
@@ -1532,7 +1616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 84,
    "id": "89f03a64",
    "metadata": {},
    "outputs": [
@@ -1561,12 +1645,6 @@
     "\n",
     "from ...core.config import settings\n",
     "from ...schemas.common import HealthResponse, ModelInfo\n",
-    "\n",
-    "# Add the src directory to Python path for importing existing ML code\n",
-    "workspace_root = Path(__file__).resolve().parents[4]  # Go up to workspace root\n",
-    "src_path = workspace_root / \"src\"\n",
-    "if str(src_path) not in sys.path:\n",
-    "    sys.path.insert(0, str(src_path))\n",
     "\n",
     "# Import existing ML utilities\n",
     "try:\n",
@@ -1965,12 +2043,13 @@
     "\n",
     "\n",
     "# Global model service instance\n",
-    "model_service = ModelService()\n"
+    "model_service = ModelService()\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 85,
    "id": "1d87ca37",
    "metadata": {},
    "outputs": [
@@ -2077,7 +2156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "id": "ebec606e",
    "metadata": {},
    "outputs": [
@@ -2130,7 +2209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 87,
    "id": "7e8150b1",
    "metadata": {},
    "outputs": [
@@ -2154,7 +2233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 88,
    "id": "c3974081",
    "metadata": {},
    "outputs": [
@@ -2199,7 +2278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 89,
    "id": "d1a46149",
    "metadata": {},
    "outputs": [
@@ -2219,19 +2298,19 @@
     "// https://vitejs.dev/config/\n",
     "export default defineConfig(({ mode }) => {\n",
     "  const env = loadEnv(mode, process.cwd(), '')\n",
-    "  const FASTAPI_URL = env.VITE_FASTAPI_URL || 'http://localhost:8000'   // FastAPI dev server\n",
+    "  const API_URL = env.VITE_API_URL || 'http://localhost:8000'   // Default to local FastAPI\n",
     "\n",
     "  return {\n",
     "    plugins: [react()],\n",
     "    define: {\n",
-    "      __FASTAPI_URL__: JSON.stringify(FASTAPI_URL),        // FastAPI URL for direct access\n",
+    "      __API_URL__: JSON.stringify(API_URL),\n",
     "    },\n",
     "    server: {\n",
     "      host: '0.0.0.0',\n",
     "      port: 5173,\n",
     "      proxy: {\n",
     "        '/api/v1': {\n",
-    "          target: FASTAPI_URL,\n",
+    "          target: API_URL,\n",
     "          changeOrigin: true,\n",
     "          secure: false,\n",
     "          xfwd: true,\n",
@@ -2245,7 +2324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 90,
    "id": "2dcd9330",
    "metadata": {},
    "outputs": [
@@ -2277,7 +2356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 91,
    "id": "239c57ce",
    "metadata": {},
    "outputs": [
@@ -2327,7 +2406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "id": "d0c210d3",
    "metadata": {},
    "outputs": [
@@ -2477,7 +2556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "id": "be68addb",
    "metadata": {},
    "outputs": [
@@ -3239,7 +3318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 94,
    "id": "42be02d8",
    "metadata": {},
    "outputs": [
@@ -3282,7 +3361,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.17"
   }
  },
  "nbformat": 4,
