--- a/environment_uv_docker_jax_pytorch_mlflow_portfriendly_frontend.ipynb
+++ b/environment_uv_docker_jax_pytorch_mlflow_portfriendly_frontend.ipynb
@@ -9,7 +9,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 40,
       "metadata": {},
       "outputs": [
         {
@@ -31,6 +31,7 @@
         "mlruns_local/\n",
         "\n",
         "node_modules/\n",
+        "frontend/node_modules/\n",
         "\n",
         "archive/\n",
         ".venv\n",
@@ -40,7 +41,7 @@
         ".env.template\n",
         "\n",
         "# Railway CLI (never commit tokens)\n",
-        ".railway/config.json"
+        ".railway/config.json\n"
       ]
     },
     {
